Yu-Gi-Oh Booster Simulator:

14/01/24
- Create 'SearchBar' component 
- Create 'HeaderProfile' component
- Create 'ItemBooster' component for rendering Booster packs 

15/01/24
- Create 'BoosterModal' component
- Create 'ItemCard' component for rendering cards in 'BoosterModal'
- Move Booster Pack data and Card data into seperate files within 'utils'

16/01/24
- Add handler for closing modals
- Add data for 'LOB' cards

17/01/24
- Add data for 'LOB' cards
- Add data for 'MRD' cards
- Refactor card data

18/01/24
- Add data for 'SRL' cards
- Add data for 'PSV' cards
- Add data for 'LON' cards
- Add key for <ItemCard />

25/01/24
- Move booster opener from modal to whole page (start creating booster opener page)
- Add Routes for each booster pack

29/01/24
- Change color scheme (add backgrounds)
- Edit booster opener page

31/01/24
- Change color scheme (add backgrounds)