@@ -1,14 +1,23 @@
+@keyframes pulsate-hover {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.15);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 .booster__page {
-  /* background: url(../../images/Backgrounds/yugioh-booster-sim\(main-background\).png)
-    no-repeat;
-  background-size: cover;
-  background-attachment: fixed; */
   padding: 0 40px;
 }
 
 .booster__container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   gap: 10px;
   padding: 0 0 30px 0;
 }
@@ -22,27 +31,48 @@
 .booster__pack-opener {
   display: flex;
   flex-direction: row;
+  position: relative;
 }
 
 .booster__pack {
-  max-width: 120px;
-  max-height: 200px;
+  width: 115px;
+  height: 200px;
   cursor: pointer;
   align-self: center;
+  position: relative;
+  border: 3px solid rgb(0, 162, 255);
+  z-index: 1;
 }
 
 .booster__pack:hover {
-  opacity: 80%;
-  transform: scale(105%);
-  transition: 0.3s ease-in-out;
+  opacity: 0.9;
+}
+
+.booster__pack-open-button {
+  background: none;
+  border: none;
+}
+
+.booster__pack-opener:hover .booster__pack_animation {
+  display: block;
+  animation: pulsate-hover 0.3s ease-in-out infinite;
+}
+
+.booster__pack_animation {
+  display: none;
+  min-width: 115px;
+  min-height: 200px;
+  position: absolute;
+  top: 19px;
+  left: 0px;
+  border: 3px solid rgb(0, 162, 255);
 }
 
 .booster__breakdown-container {
   min-width: 350px;
   max-height: fit-content;
-  /* background-color: white; */
   background: transparent;
-  border: 3px solid rgb(3, 25, 228);
+  border: 5px solid white;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -53,9 +83,12 @@
   font-size: larger;
   color: white;
   margin: 10px auto 10px auto;
-  padding: 2px 3px 2px 3px;
-  border-radius: 10px;
-  max-width: fit-content;
+}
+
+.booster__breakdown-pack-size {
+  font-size: larger;
+  color: white;
+  margin: 0 auto 10px;
 }
 
 .booster__breakdown-list_total {
@@ -71,7 +104,7 @@
   margin: 0;
   color: white;
   font-size: large;
-  border-bottom: 2px solid rgb(3, 25, 228);
+  font-weight: bold;
 }
 
 .booster__breakdown-list {
@@ -80,7 +113,7 @@
   gap: 50px;
   max-width: fit-content;
   align-self: center;
-  margin: 0 0 10px 0;
+  margin: 0 0 20px 0;
 }
 
 .booster__breakdown-list-item {
@@ -92,6 +125,7 @@
 .booster__breakdown-list-qauntity {
   margin: 0 0 0 5px;
   display: inline;
+  font-weight: bold;
 }
 
 /* -------------------------------- CARDLIST -------------------------------- */
@@ -99,7 +133,8 @@
   max-width: 100vw;
   min-height: max-content;
   background-color: white;
-  border: 3px solid rgb(3, 25, 228);
+  /* border: 3px solid rgb(3, 25, 228); */
+  border: 5px solid white;
   /* padding: 30px 0 30px 0; */
   background: transparent;
 }
@@ -107,9 +142,9 @@
 .booster__cardlist-title {
   color: white;
   font-size: larger;
+  font-weight: bold;
   margin: 10px auto 0 auto;
   padding: 2px 3px 2px 3px;
-  border-radius: 10px;
   max-width: fit-content;
 }
 
@@ -140,4 +175,20 @@
   opacity: 80%;
   transform: scale(1.03);
   transition: 0.1s ease-in-out;
+}
+
+/* ------------------------------------ x ----------------------------------- */
+.booster__pack-cards {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  min-width: max-content;
+  margin: 0 0 30px 0;
+  gap: 5px;
+}
+
+.img {
+  width: 115px;
+  height: 200px;
 }
