@@ -30,7 +30,7 @@
     url("/src/images/Backgrounds/yugioh-booster-sim\(grid-item\ background\).svg")
     no-repeat center;
   background-size: cover;
-  border: 10px solid rgb(3, 25, 228);
+  border: 10px solid rgb(0, 162, 255);
   position: fixed;
   top: 50%;
   left: 50%;
